--- a/scss/_mixVariables.scss
+++ b/scss/_mixVariables.scss
@@ -15,6 +15,7 @@ $text-black: #000;
 $text-dark: #313131;
 $text-dark2: rgba(0, 0, 0, 0.3);
 $text-gray: #555;
+$text-gray2: #a9a9a9;
 $text-white: #fff;
 $text-light: #eee;
 $text-light2: rgba(255, 255, 255, 0.7);
