--- a/scss/_bnw.scss
+++ b/scss/_bnw.scss
@@ -8,7 +8,6 @@
   header {
     border-top: 10px solid $bg-light;
     h1 {
-      color: $text-light;
       a {
         &:hover {
           color: $text-white;
@@ -44,7 +43,7 @@
     }
   }
   .menu {
-    color: $text-light;
+    color: $text-white;
     #menu1:hover {
       color: $text-white;
     }
@@ -54,10 +53,33 @@
     #menu3:hover {
       color: $text-white;
     }
+    #menu4:hover {
+      color: $text-white;
+    }
+  }
+  .footer {
+    p {
+      color: $text-gray2;
+    }
   }
 }
 
 .container.bnw {
+  &::before {
+    border: 1px solid white;
+    border-right: none;
+    border-top: none;
+  }
+  &::after {
+    border: 1px solid white;
+    border-right: none;
+    border-top: none;
+  }
+  .sectionSkills {
+    p {
+      color: $text-white;
+    }
+  }
   .sectionContact {
     section {
       a {
