--- a/scss/_menuBG.scss
+++ b/scss/_menuBG.scss
@@ -55,6 +55,10 @@
     color: $text-black;
     text-shadow: 0px 5px 0 $yellow-rgba;
   }
+  #menu4:hover {
+    color: $text-black;
+    text-shadow: 0 5px 0 $gray-medium;
+  }
 }
 
 .btnClose {
