--- a/scss/_sectionMain.scss
+++ b/scss/_sectionMain.scss
@@ -1,7 +1,8 @@
 div.allSection {
   width: calc(100% - 120px);
   &:not(:nth-of-type(1)) {
-    margin-top: 160px;
+    margin-top: 80px;
+    padding: 40px 0;
   }
 }
 .sectionMain {
@@ -12,6 +13,7 @@ div.allSection {
 
 .sectionIntro {
   width: 100%;
+  padding-top: 40px;
   header {
     h3 {
       // height: 0;
@@ -59,6 +61,19 @@ div.allSection {
         text-align: center;
         img {
           height: 100px;
+          &:hover + p {
+            opacity: 1;
+          }
+        }
+        p {
+          width: 100px;
+          color: $text-black;
+          font-size: 14px;
+          line-height: 20px;
+          font-weight: bold;
+          margin: 0 auto;
+          opacity: 0;
+          transition: opacity 0.3s;
         }
       }
     }
@@ -71,8 +86,9 @@ div.allSection {
   section {
     margin-top: 40px;
     // border: 1px solid red;
-    h4 {
+    h5 {
       margin-top: 40px;
+      text-indent: 1em;
     }
     .galleryProjects {
       ul {
@@ -98,7 +114,7 @@ div.allSection {
 .sectionContact {
   // border: 5px solid red;
   text-align: center;
-  padding: 10vh 0;
+  padding-bottom: 120px !important;
   header {
     margin-bottom: 5vh;
   }
